test/fail/super-variable.grace
constructor new {
  def name = object {}

  name
}

object {
  inherits new

  def name = object {}
}

